# imageorganizer

./: .gitignore  README.md  justfile  organizer.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/imageorganizer/: cli.py  config.py  constants.py  organizer.py  utils.py
tests/: test_organizer.py
