[project]
name = "imageorganizer"
version = "2.1.0"
description = "Organize images by camera Make/Model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.7",
    "snakeviz>=2.2.2",
    "types-tqdm>=4.67.0.20250516",
]
