[build-system]
requires = ["uv_build >= 0.8.4, <0.9.0"]
build-backend = "uv_build"

[project]
name = "imageorganizer"
version = "3.0.0"
description = "Organize your directories of images using their metadata information."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "pillow>=11.3.0",
    "pymediainfo>=7.0.1",
    "rich>=14.3.3",
]

[project.urls]
Homepage = "https://github.com/1hiking/imageorganizer"
Repository = "https://github.com/1hiking/imageorganizer"
Issues = "https://github.com/1hiking/imageorganizer/issues"

[project.scripts]
imageorganizer = "imageorganizer.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]
